--- a/LoanDefaultPrediction.ipynb
+++ b/LoanDefaultPrediction.ipynb
@@ -1383,16 +1383,19 @@
     }
    ],
    "source": [
-    "# Load the train and test dataframes\n",
     "train_df = pd.read_csv('train.csv')\n",
     "test_df = pd.read_csv('test.csv')\n",
     "\n",
+    "# Create a new feature called \"TotalIncome\" by summing the BorrowerIncome and CoBorrowerIncome columns\n",
+    "train_df['TotalIncome'] = train_df['BorrowerIncome'] + train_df['CoBorrowerIncome']\n",
+    "test_df['TotalIncome'] = test_df['BorrowerIncome'] + test_df['CoBorrowerIncome']\n",
+    "\n",
     "# Fit a dummy classifier on the feature columns in train_df:\n",
     "dummy_clf = DummyClassifier(strategy=\"stratified\")\n",
-    "dummy_clf.fit(train_df.drop(['LoanID', 'Default'], axis=1), train_df.Default)\n",
+    "dummy_clf.fit(train_df.drop(['LoanID', 'Default', 'TotalIncome'], axis=1), train_df.Default)\n",
     "\n",
     "# Use our dummy classifier to make predictions on test_df using `predict_proba` method:\n",
-    "predicted_probability = dummy_clf.predict_proba(test_df.drop(['LoanID'], axis=1))[:, 1]\n",
+    "predicted_probability = dummy_clf.predict_proba(test_df.drop(['LoanID', 'TotalIncome'], axis=1))[:, 1]\n",
     "\n",
     "# Combine predictions with label column into a dataframe\n",
     "prediction_df = pd.DataFrame({'LoanID': test_df[['LoanID']].values[:, 0],\n",
